height fix on mobile

--- a/src/scss/01-Abstracts/_mixins.scss
+++ b/src/scss/01-Abstracts/_mixins.scss
@@ -182,6 +182,19 @@
     }
 }
 
+
+// Dynamic Viewport Units
+@mixin dvw($value: 100) {
+    width: #{$value}vw;
+    width: #{$value}dvw;
+}
+
+@mixin dvh($value: 100) {
+    height: #{$value}vw;
+    height: #{$value}dvw;
+}
+
+
 //% ***************    *************** //
 
 
