--- a/src/scss/04-Components/_overlay.scss
+++ b/src/scss/04-Components/_overlay.scss
@@ -4,8 +4,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100dvw;
-  height: 100dvh;
+  height: 100%;
+  width: 100%;
   z-index: 200;
   background-color: rgba(color('black'), .6);
 }
